# jarvis-ai-assistant

./: -->  .bandit  .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CASE_STUDY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_AUDIT.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_REVIEW.md  CODE_REVIEW.md  COMMIT_EDITMSG  CONTEXT_BACKFILL_RESULTS.md  CONTEXT_STRATEGY_ANALYSIS.md  CONTRIBUTING.md  EVALUATION_5000_MESSAGES.md  FACT_EXTRACTION_VALIDATION.md  FINAL_HUMAN_LABELS.md  FINAL_VERDICT.md  GEMINI.md  LLM_LABELING_PIPELINE.md  LLM_VALIDATION_FINDINGS.md  MANUAL_FACT_EVALUATION.md  Makefile  PERFORMANCE_AUDIT_REPORT.md  PHASE2_COMPLETE.md  PORTFOLIO.md  PROMPT_REFINEMENT_RESULTS.md  README.md  REFACTORING_SUMMARY_CORE.md  TRAINING_FIX_SUMMARY.md  VALIDATION.md  all_extracted_facts.json  bandit_output.json  (+100 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: backend.rs  lib.rs  logging.rs  main.rs  socket.rs  tray.rs
v2/: Makefile  PLAN.md  pyproject.toml
v2/api/: main.py  schemas.py
v2/api/routes/: conversations.py  generate.py  health.py  search.py  settings.py  websocket.py
v2/core/: __init__.py
v2/core/calendar/: __init__.py  detector.py  models.py  reader.py
v2/core/embeddings/: __init__.py  cache.py  contact_profiler.py  indexer.py  model.py  relationship_registry.py  store.py
v2/core/evaluation/: response_types.py
v2/core/generation/: coherence.py  context_analyzer.py  fewshot_retriever.py  fewshot_retriever_v2.py  global_styler.py  llm_analyzer.py  model_prompts.py  multi_generator.py  prompts.py  reasoning_generator.py  reply_generator.py  smart_prompter.py  smart_prompter_v2.py  style_analyzer.py  style_prompter.py
v2/core/imessage/: __init__.py  reader.py  sender.py
v2/core/models/: loader.py  registry.py
v2/core/templates/: __init__.py  matcher.py
v2/core/utils/: __init__.py  text.py
v2/desktop/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
v2/desktop/src/: app.css  app.html
v2/desktop/src-tauri/: Cargo.toml  tauri.conf.json
v2/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  EMBEDDINGS.md  EVAL_FRAMEWORK.md  GENERATION_PIPELINE.md  IMPROVEMENTS_ROADMAP.md  MODEL_EVALUATION_FINDINGS.md  PERSONALIZED_REPLY_GENERATION_RESEARCH.md  README.md  RELATIONSHIP_RAG.md  REPLY_GENERATION_PLAN.md
v2/results/: context_benchmark.json  generated_intent_anchors.json  model_benchmark.json
v2/results/baseline/: baseline_casual_lfm2-2.6b-exp_50.json  baseline_casual_lfm2.5-1.2b_100.json  baseline_casual_lfm2.5-1.2b_50.json  baseline_casual_llama-3.2-1b_50.json  baseline_casual_llama-3.2-3b_50.json  baseline_casual_qwen2.5-1.5b_50.json  baseline_casual_smollm2-1.7b_50.json  baseline_casual_smollm3-3b_50.json  baseline_detailed_lfm2-2.6b-exp_50.json  baseline_detailed_lfm2.5-1.2b_100.json  baseline_detailed_lfm2.5-1.2b_50.json  baseline_detailed_llama-3.2-1b_50.json  baseline_detailed_llama-3.2-3b_50.json  baseline_detailed_qwen2.5-1.5b_50.json  baseline_detailed_smollm2-1.7b_50.json  baseline_detailed_smollm3-3b_50.json  baseline_raw_lfm2-2.6b-exp_50.json  baseline_raw_lfm2-2.6b_5.json  baseline_raw_lfm2.5-1.2b_100.json  baseline_raw_lfm2.5-1.2b_50.json  baseline_raw_llama-3.2-1b_50.json  baseline_raw_llama-3.2-3b_50.json  baseline_raw_qwen2.5-1.5b_50.json  baseline_raw_smollm2-1.7b_50.json  baseline_raw_smollm3-3b_50.json  baseline_simple_lfm2-2.6b-exp_50.json  baseline_simple_lfm2.5-1.2b_100.json  baseline_simple_lfm2.5-1.2b_50.json  baseline_simple_llama-3.2-1b_50.json  baseline_simple_llama-3.2-3b_50.json  baseline_simple_qwen2.5-1.5b_50.json  baseline_simple_smollm2-1.7b_50.json  baseline_simple_smollm3-3b_50.json  comparison_lfm2.5-1.2b_100.json  grid_search_50.json
v2/results/capability_tests/: capability_results.json  capability_results_10iter.json  capability_results_3iter.json  capability_results_5iter.json
v2/results/clustering/: clusters.json  comprehensive_profiles.json  contact_clusters.json  contact_embeddings.npz  enhanced_hybrid.json  hybrid_analysis.json  style_clusters.json
v2/results/comprehensive_eval/: eval_results_10.json
v2/scripts/: analyze_style_features.py  baseline_eval.py  benchmark_models.py  benchmark_with_context.py  build_response_templates.py  categorize_test_set.py  cluster_contacts.py  collect_training_data.py  comprehensive_eval.py  create_clean_test_set.py  create_test_set.py  evaluate_smart_prompts.py  evaluate_v2_prompts.py  extract_all_contacts.py  extract_contacts_with_names.py  extract_training_pairs.py  fix_profiles.py  human_eval.py  import_all_contacts.py  index_messages.py  intent_eval.py  label_contacts.py  model_experiment.py  profile_contacts.py  profile_my_contacts.py  prompt_ablation.py  proper_eval.py  test_embeddings.py  test_generation.py  test_model_capabilities.py  validate_classifier.py  validate_labels.py
v2/tests/: conftest.py  test_context_analyzer.py  test_context_analyzer_comprehensive.py  test_integration.py  test_prompts.py  test_relationship_registry.py  test_reply_generator.py  test_style_analyzer.py  test_style_analyzer_comprehensive.py
v3/: ASSESSMENT.md  Makefile  README.md  pyproject.toml
v3/api/: __init__.py  main.py  schemas.py
v3/core/: config.py  intent.py
v3/docs/: ARCHITECTURE.md  DATA_STORAGE.md  EMBEDDING_PERFORMANCE.md  FLOWCHARTS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_OPPORTUNITIES.md  TESTING.md  VERSION_COMPARISON_FINDINGS.md
v3/results/: baseline_contacts.json  baseline_v2.json  baseline_v3.json  baseline_v3_improved.json  evaluation_samples.json
v3/scripts/: __init__.py  build_faiss_indices.py  compare_prompts.py  compare_versions.py  evaluate_replies.py  extract_all_contacts.py  index_messages.py  label_contacts.py  profile_contacts.py  reindex_full_text.py  test_real_replies.py  test_v3.py  validate_setup.py
v3/tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_context_analyzer.py  test_embeddings.py  test_intent.py  test_pipeline.py  test_relationship_registry.py
(+2259 files in other folders)
