[project]
name = "jarvis-ai-assistant"
version = "1.0.0"
description = "Local-first AI assistant for macOS with iMessage integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jwalin Shah"}
]
keywords = ["ai", "assistant", "macos", "local", "privacy", "mlx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.5.0",
    "mlx-lm>=0.5.0",
    "sentence-transformers>=2.2.0",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
benchmarks = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]

[project.scripts]
jarvis = "jarvis.cli:run"

[project.urls]
Homepage = "https://github.com/jwalinshah/jarvis-ai-assistant"
Documentation = "https://github.com/jwalinshah/jarvis-ai-assistant#readme"
Repository = "https://github.com/jwalinshah/jarvis-ai-assistant.git"
Issues = "https://github.com/jwalinshah/jarvis-ai-assistant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "integrations", "core", "models", "benchmarks", "jarvis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
