[project]
name = "jarvis-ai-assistant"
version = "1.0.0"
description = "Local-first AI assistant for macOS with iMessage integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jwalin Shah"}
]
keywords = ["ai", "assistant", "macos", "local", "privacy", "mlx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    "sentence-transformers>=5.0.0",
    "psutil>=7.0.0",
    "pydantic>=2.10.0",
    "rich>=14.0.0",
    "fastapi>=0.125.0",
    "uvicorn[standard]>=0.35.0",
    "argcomplete>=3.5.0",
    "reportlab>=4.4.0",
    "slowapi>=0.1.9",
    "python-dateutil>=2.9.0",
    "faiss-cpu>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.15.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=1.0.0",
    "types-PyYAML>=6.0.0",
]
benchmarks = [
    "transformers>=4.45.0",
    "torch>=2.5.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.3",
    "tqdm>=4.67.0",
]

[project.scripts]
jarvis = "jarvis.cli:run"

[project.urls]
Homepage = "https://github.com/jwalinshah/jarvis-ai-assistant"
Documentation = "https://github.com/jwalinshah/jarvis-ai-assistant#readme"
Repository = "https://github.com/jwalinshah/jarvis-ai-assistant.git"
Issues = "https://github.com/jwalinshah/jarvis-ai-assistant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "integrations", "core", "models", "benchmarks", "jarvis", "api", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
timeout = 30
timeout_method = "thread"

[dependency-groups]
dev = [
    "jarvis-ai-assistant[dev]",
    "pytest-timeout>=2.4.0",
    "types-python-dateutil>=2.9.0.20260124",
]
