[project]
name = "jarvis-ai-assistant"
version = "1.0.0"
description = "Local-first AI assistant for macOS with iMessage integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jwalin Shah"}
]
keywords = ["ai", "assistant", "macos", "local", "privacy", "mlx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.30.6",
    "psutil>=7.0.0",
    "pydantic>=2.10.0",
    "rich>=14.0.0",
    "fastapi>=0.125.0",
    "uvicorn[standard]>=0.35.0",
    "argcomplete>=3.5.0",
    "reportlab>=4.4.0",
    "slowapi>=0.1.9",
    "python-dateutil>=2.9.0",
    "sqlite-vec>=0.1.6",
    "pyarrow>=18.0.0",
    "umap-learn>=0.5.11",
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.5",
    "websockets>=16.0",
    "watchfiles>=1.0.0",
    "rank-bm25>=0.2.2",
    "xgboost>=3.1.3",
    "lightgbm>=4.6.0",
    "tokenizers>=0.20.0",
    "einops>=0.8.2",
    "langdetect>=1.0.9",
    "spacy>=3.7.0",
    "groq>=1.0.0",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "mypy>=1.15.0",
    "httpx>=0.28.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.9.0",
    "datasets>=4.5.0",
]
reranking = [
    "sentence-transformers>=5.0.0",
    "setfit>=1.1.0",
]
benchmarks = [
    "transformers>=4.45.0",
    "torch>=2.5.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.3",
    "tqdm>=4.67.0",
    "hdbscan>=0.8.38",
]
training = [
    "scikit-learn>=1.6.1",
    "numpy>=2.2.3",
    "optuna>=4.0.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
]
experiments = [
    "bertopic>=0.17.4",
]
evals = [
    "dspy>=3.1",
    "openai>=1.0.0",
]
coref = [
    "fastcoref>=0.2.0",
]

[project.scripts]
jarvis = "jarvis._cli_main:run"

[project.urls]
Homepage = "https://github.com/jwalinshah/jarvis-ai-assistant"
Documentation = "https://github.com/jwalinshah/jarvis-ai-assistant#readme"
Repository = "https://github.com/jwalinshah/jarvis-ai-assistant.git"
Issues = "https://github.com/jwalinshah/jarvis-ai-assistant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "integrations", "core", "models", "benchmarks", "jarvis", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741"]  # Allow single-letter variable names (common in ML code)

[tool.ruff.lint.per-file-ignores]
# ML scripts use standard conventions like X, C, X_train, BATCH_SIZE
"experiments/**/*.py" = ["N803", "N806"]
"scripts/train_*.py" = ["N803", "N806"]
"scripts/label_*.py" = ["N803", "N806"]
"scripts/eval_*.py" = ["N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --doctest-modules --cov=jarvis --cov=api --cov=models --cov=core --cov=integrations --cov=contracts --cov=benchmarks --cov-report=term-missing"
timeout = 30
timeout_method = "thread"
markers = [
    "real_model: mark test as requiring a real MLX model to be available",
]

[tool.coverage.run]
source = ["jarvis", "api", "models", "core", "integrations", "contracts", "benchmarks"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "dspy>=3.1.3",
    "jarvis-ai-assistant[dev]",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.14",
    "types-python-dateutil>=2.9.0.20260124",
]

[tool.bandit]
exclude_dirs = ["tests", "tools"]
targets = ["jarvis", "api", "core"]

