[project]
name = "jarvis-v2"
version = "2.0.0"
description = "Local-first AI assistant for iMessage - simplified MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "mlx>=0.5.0",
    "mlx-lm>=0.4.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.10.8",
    "sentence-transformers>=5.2.2",
    "einops>=0.8.2",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]
search = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
